--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,15 @@ h1
 color: LightSlateGrey;
 text-align: center;
 } 
+.projects 
+{ 
+    display:flex; flex-wrap:wrap; 
+}
+.project 
+{
+width: 30%;
+margin: 10px;
+padding: 20px 10px;
+background: LightCyan;
+border-radius: 25%;
+}
