--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ text-align: center;
 } 
 .projects 
 { 
-    display:flex; flex-wrap:wrap; 
+    display:flex; 
+    flex-wrap:wrap; 
 }
 .project 
 {
