--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,54 @@
 body 
 {
-background: LightCyan;
-font-family: "Times New Roman", Times, serif;
+	background: LightCyan;
+	font-family: "Times New Roman", Times, serif;
 }
 h1 
 {
-color: LightSlateGrey;
-text-align: center;
-} 
+	color: LightSlateGrey;
+	text-align: center;
+}
 .projects 
 { 
-    display:flex; 
-    flex-wrap:wrap; 
+    /* make the blobs float side-by-side */
+	display:flex; 
+	flex-wrap:wrap;  
+} 
+.projects h2 
+{
+    /* display the h2 on its own line, not with the section blobs */
+	width: 100%;
 }
 .project 
 {
-width: 30%;
-margin: 10px;
-padding: 20px 10px;
-background: LightSlateGrey;
-border-radius: 25%;
+    /* form the section blobs */
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+    background: lightslategray;
+    /* rounded corners for the blobs */
+    border-radius: 25%;
 }
-.project img
+.project h3 
 {
-width: 300px;
-height: 300px;
-margin: 10px;
-border: 2px solid rgb(126, 14, 201); /* choose a color */
-display: block;
-margin: auto;
+    /* pull the h3 text away from the left blob wall */
+    margin-left: 50px;
 }
-a 
-{ /* change the appearance of ALL links */
-text-decoration: none;
-color: purple;
+.project img 
+{
+    /* adjust your image sizes as needed */
+    width: 400px;
+    height: 300px;
+    margin: 10px auto;
+    border: 2px solid navy;
+    display: block;
+    /* center the images inside the blobs */
+    text-align: center;
 }
 .project p 
-{ /* change the appearance of paragraph tags inside .project divs */
-text-align: center;
-margin: 15px;
+{
+
+    /* center the p text in the blob */
+    text-align: center;
+    margin: 15px;
 }
