--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,26 @@
-body {
-	background: cornsilk;
-	font-family: Arial, Helvetica, sans-serif;
+body
+{
+    background: LightCyan;
+    font-family: "Times New Roman", Times, serif;
 }
-h1 {
-	color: darkslategrey;
-	text-align: center;
+h1
+{
+    color: LightSlateGrey;
+    text-align: center;
 }
-.projects { 
+.projects
+{
     /* make the blobs float side-by-side */
-	display:flex; 
-	flex-wrap:wrap;  
-} 
-.projects h2 {
-    /* display the h2 on its own line, not with the section blobs */
-	width: 100%;
+    display:flex;
+    flex-wrap:wrap;  
 }
-.project {
+.projects h2
+{
+    /* display the h2 on its own line, not with the section blobs */
+    width: 100%;
+}
+.project
+{
     /* form the section blobs */
     width: 30%;
     margin: 10px;
@@ -24,11 +29,13 @@ h1 {
     /* rounded corners for the blobs */
     border-radius: 25%;
 }
-.project h3 {
+.project h3
+{
     /* pull the h3 text away from the left blob wall */
     margin-left: 50px;
 }
-.project img {
+.project img
+{
     /* adjust your image sizes as needed */
     width: 400px;
     height: 300px;
@@ -38,7 +45,8 @@ h1 {
     /* center the images inside the blobs */
     text-align: center;
 }
-.project p {
+.project p
+{
     /* center the p text in the blob */
     text-align: center;
     margin: 15px;
